[package]
name = "adv-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
code-timing-macros = { version = "0.0.5", features = ["release"] }
const_format = "0.2.33"

# Additional recommended dependencies
itertools = "0.13.0"
regex = "1.11.1"
#numeric like bigdecimals
num = "0.4.3"
#algebra
nalgebra = "0.33.2"
petgraph = "0.5.1"
bevy = "0.15.0"

